--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="/css/style.css">
 
         <!--[if lt IE 9]>
-            <script src="js/ie8.js"></script>
+            <script src="/js/ie8.js"></script>
         <![endif]-->
     </head>
     <body>
@@ -67,7 +67,7 @@
                 <h3>footer</h3>
             </footer>
         </div>
-        <script src="js/vendor.js"></script>
-        <script src="js/main.js"></script>
+        <script src="/js/vendor.js"></script>
+        <script src="/js/main.js"></script>
     </body>
 </html>
